@@ -1,6 +1,5 @@
 package net.minecraft.world.level.storage.loot.functions;
 
-import com.google.common.collect.ImmutableSet;
 import com.mojang.serialization.Codec;
 import com.mojang.serialization.MapCodec;
 import com.mojang.serialization.codecs.RecordCodecBuilder;
@@ -8,10 +7,10 @@ import java.util.List;
 import java.util.Set;
 import net.minecraft.core.component.DataComponents;
 import net.minecraft.util.StringRepresentable;
+import net.minecraft.util.context.ContextKey;
 import net.minecraft.world.Nameable;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.storage.loot.LootContext;
-import net.minecraft.world.level.storage.loot.parameters.LootContextParam;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParams;
 import net.minecraft.world.level.storage.loot.predicates.LootItemCondition;
 
@@ -32,13 +31,13 @@ public class CopyNameFunction extends LootItemConditionalFunction {
    }
 
    @Override
-   public Set<LootContextParam<?>> getReferencedContextParams() {
-      return ImmutableSet.of(this.source.param);
+   public Set<ContextKey<?>> getReferencedContextParams() {
+      return Set.of(this.source.param);
    }
 
    @Override
    public ItemStack run(ItemStack var1, LootContext var2) {
-      if (var2.getParamOrNull(this.source.param) instanceof Nameable var4) {
+      if (var2.getOptionalParameter(this.source.param) instanceof Nameable var4) {
          var1.set(DataComponents.CUSTOM_NAME, var4.getCustomName());
       }
 
@@ -57,9 +56,9 @@ public class CopyNameFunction extends LootItemConditionalFunction {
 
       public static final Codec<CopyNameFunction.NameSource> CODEC = StringRepresentable.fromEnum(CopyNameFunction.NameSource::values);
       private final String name;
-      final LootContextParam<?> param;
+      final ContextKey<?> param;
 
-      private NameSource(final String nullxx, final LootContextParam<?> nullxxx) {
+      private NameSource(final String nullxx, final ContextKey<?> nullxxx) {
          this.name = nullxx;
          this.param = nullxxx;
       }
