@@ -1,17 +1,16 @@
 package net.minecraft.world.level.storage.loot.functions;
 
-import com.google.common.collect.ImmutableSet;
 import com.mojang.serialization.MapCodec;
 import com.mojang.serialization.codecs.RecordCodecBuilder;
 import java.util.List;
 import java.util.Set;
 import net.minecraft.core.component.DataComponents;
+import net.minecraft.util.context.ContextKey;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Items;
 import net.minecraft.world.item.component.ResolvableProfile;
 import net.minecraft.world.level.storage.loot.LootContext;
-import net.minecraft.world.level.storage.loot.parameters.LootContextParam;
 import net.minecraft.world.level.storage.loot.predicates.LootItemCondition;
 
 public class FillPlayerHead extends LootItemConditionalFunction {
@@ -31,13 +30,13 @@ public class FillPlayerHead extends LootItemConditionalFunction {
    }
 
    @Override
-   public Set<LootContextParam<?>> getReferencedContextParams() {
-      return ImmutableSet.of(this.entityTarget.getParam());
+   public Set<ContextKey<?>> getReferencedContextParams() {
+      return Set.of(this.entityTarget.getParam());
    }
 
    @Override
    public ItemStack run(ItemStack var1, LootContext var2) {
-      if (var1.is(Items.PLAYER_HEAD) && var2.getParamOrNull(this.entityTarget.getParam()) instanceof Player var3) {
+      if (var1.is(Items.PLAYER_HEAD) && var2.getOptionalParameter(this.entityTarget.getParam()) instanceof Player var3) {
          var1.set(DataComponents.PROFILE, new ResolvableProfile(var3.getGameProfile()));
       }
 
